<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.ciandt</groupId>
    <artifactId>parking-gt</artifactId>
    <packaging>war</packaging>
    <version>0.0.1</version>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>1.2.4.RELEASE</version>
    </parent>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-tomcat</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-jetty</artifactId>
            <version>1.2.4.RELEASE</version>
        </dependency>

         <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-actuator</artifactId>
            <version>1.2.4.RELEASE</version>
        </dependency>

        <dependency>
            <groupId>org.liquibase</groupId>
            <artifactId>liquibase-core</artifactId>
        </dependency>

        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>9.4-1201-jdbc41</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>

     </dependencies>

    <properties>
        <java.version>1.7</java.version>
    </properties>


    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>

            <plugin>
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-maven-plugin</artifactId>
                <version>9.0.3.v20130506</version>
                <configuration>
                    <webAppConfig>
                        <contextPath>/${project.name}</contextPath>
                        <!-- <defaultsDescriptor>src/main/resources/webdefault.xml</defaultsDescriptor> -->
                    </webAppConfig>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>codeQA</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>jslint-maven-plugin</artifactId>
                        <version>1.0.1</version>
                        <configuration>
                            <sourceJsFolder>${basedir}/src/main/webapp/js</sourceJsFolder>
                            <excludes>
                                <exclude>libs/**</exclude>
                                <exclude>manual/**</exclude>
                                <exclude>minified/**</exclude>
                            </excludes>
                            <maximumLengthOfLine>120</maximumLengthOfLine>
                            <requireUseStrict>true</requireUseStrict>
                            <predefinedVars>$,_,Backbone,Backgrid,window,contextPath</predefinedVars>
                        </configuration>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>jslint</goal>
                                    <goal>test-jslint</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>findbugs-maven-plugin</artifactId>
                        <version>2.5.2</version>
                        <configuration>
                            <xmlOutput>true</xmlOutput>
                            <threshold>Default</threshold>
                            <effort>Max</effort>
                            <includeFilterFile>src/main/check/findbugs-include.xml</includeFilterFile>
                            <excludeFilterFile>src/main/check/findbugs-exclude.xml</excludeFilterFile>
                        </configuration>
                        <executions>
                            <execution>
                                <phase>verify</phase>
                                <goals>
                                    <goal>check</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-pmd-plugin</artifactId>
                        <version>2.7</version>
                        <configuration>
                            <targetJdk>${java.version}</targetJdk>
                            <minimumTokens>100</minimumTokens>
                            <verbose>true</verbose>
                            <rulesets>
                                <ruleset>src/main/check/pmd.xml</ruleset>
                            </rulesets>
                            <excludes>
                                <exclude>**/generated/*</exclude>
                            </excludes>
                        </configuration>
                        <executions>
                            <execution>
                                <phase>verify</phase>
                                <goals>
                                    <goal>check</goal>
                                    <goal>cpd-check</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-checkstyle-plugin</artifactId>
                        <version>2.8</version>
                        <configuration>
                            <consoleOutput>true</consoleOutput>
                            <configLocation>src/main/check/checkstyle.xml</configLocation>
                            <propertyExpansion>basedir=${project.basedir}</propertyExpansion>
                            <violationSeverity>info</violationSeverity>
                            <includeTestSourceDirectory>false</includeTestSourceDirectory>
                        </configuration>
                        <executions>
                            <execution>
                                <phase>verify</phase>
                                <goals>
                                    <goal>check</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.12</version>
                <configuration>
                    <printSummary>false</printSummary>
                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
                    <excludes>
                        <exclude>**/*_Roo_*</exclude>
                        <exclude>**/WalmartLdapAuthenticationProvider*</exclude>
                        <exclude>**/GenericQuartzJob*</exclude>
                        <exclude>**/generated/*</exclude>
                    </excludes>
                    <forkCount>2C</forkCount>
                    <reuseForks>true</reuseForks>
                    <argLine>-Xmx512m -XX:MaxPermSize=128m ${jacoco.agent.argLine}</argLine>
                </configuration>
            </plugin>
                </plugins>
            </build>
        </profile>
	</profiles>
</project>